// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`PLV8ifyCLI tests getSQLFunction with parameters 1`] = `
"DROP FUNCTION IF EXISTS plv8ify_test();
CREATE OR REPLACE FUNCTION plv8ify_test() RETURNS JSONB AS $plv8ify$
console.log('hello')
return test()

$plv8ify$ LANGUAGE plv8 IMMUTABLE STRICT;"
`;

exports[`PLV8ifyCLI tests getSQLFunction with custom delimiter 1`] = `
"DROP FUNCTION IF EXISTS plv8ify_test();
CREATE OR REPLACE FUNCTION plv8ify_test() RETURNS JSONB AS $function$
console.log('hello')
return test()

$function$ LANGUAGE plv8 IMMUTABLE STRICT;"
`;

exports[`PLV8ifyCLI tests getSQLFunction with parameters-trigger 1`] = `
"DROP FUNCTION IF EXISTS plv8ify_test();
CREATE OR REPLACE FUNCTION plv8ify_test() RETURNS TRIGGER AS $plv8ify$

function test(NEW, OLD) {
  if (TG_OP === "UPDATE") {
    NEW.event_name = NEW.event_name ?? OLD.event_name;
    return NEW;
  }
  if (TG_OP === "INSERT") {
    NEW.id = 102;
    return NEW;
  }
}      
      
return test(NEW,OLD)

$plv8ify$ LANGUAGE plv8 IMMUTABLE STRICT;"
`;

exports[`PLV8ifyCLI tests getSQLFunction with custom-schema 1`] = `
"DROP FUNCTION IF EXISTS testschema.plv8ify_test();
CREATE OR REPLACE FUNCTION testschema.plv8ify_test() RETURNS text AS $plv8ify$

function test() {
  return "hello";
}      
      
return test()

$plv8ify$ LANGUAGE plv8 IMMUTABLE STRICT;"
`;

exports[`PLV8ifyCLI tests getSQLFunction with custom type 1`] = `
"DROP FUNCTION IF EXISTS test(test test_type[]);
CREATE OR REPLACE FUNCTION test(test test_type[]) RETURNS JSONB AS $plv8ify$

      export function hello(test: test_type[]) {
        return {
          name: "Hello" + test[0].name,
          age: test[0].age,
        }
      }      
      
return test(test)

$plv8ify$ LANGUAGE plv8 IMMUTABLE STRICT;"
`;
